# pythonnet

./: azure-pipelines-redis.yml  clr.py  pyproject.toml  pythonnet.sln  setup.cfg  setup.py  setup_dotnet.py  version.txt
pythonnet/: __init__.py
pythonnet/clr_loader2/: __init__.py
pythonnet/clr_loader2/util/: runtime_spec.py
src/console/: Console.csproj
src/embed_tests/: Python.EmbeddingTest.csproj
src/perf_tests/: Python.PerformanceTests.csproj
src/python_tests_runner/: Python.PythonTestsRunner.csproj
src/runtime/: AssemblyManager.cs  ImportHook.cs  PluginLoadContext.cs  Python.Runtime.csproj
src/runtime/Codecs/: IterableDecoder.cs
src/runtime/CollectionWrappers/: IterableWrapper.cs  ListWrapper.cs  SequenceWrapper.cs
src/testing/: Python.Test.csproj
tests/: conftest.py  tests.pyproj
tests/domain_tests/: Python.DomainReloadTests.csproj
