[metadata]
name = elan_pythonnet
author = Elan
author_email = tech@elan-cap.com
description = Elan Pythonnet
version = file: version.txt

[files]
packages =
  elan_pythonnet

[options]
packages = find:
zip_safe = False
install_requires =
  wheel
  pycparser
  clr-loader==0.2.*
  find_libpython==0.3.*